--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -28,10 +28,21 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src/**/*", ".eslintrc.js", "webpack-hmr.js"],
   "exclude": ["node_modules", "dist"],
-  "types": ["./src/global.d.ts"]
+  "types": ["./src/global.d.ts"],
+  "ts-node": {
+    // It is faster to skip typechecking.
+    // Remove if you want ts-node to do typechecking.
+    "transpileOnly": true,
+    "files": true,
+    "compilerOptions": {
+      // compilerOptions specified here will override those declared below,
+      // but *only* in ts-node.  Useful if you want ts-node and tsc to use
+      // different options with a single tsconfig.json.
+    }
+  }
 }
