--- a/server/package.json
+++ b/server/package.json
@@ -35,9 +35,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "NEST_DEBUG=true nest start --debug --watch",
-    "start:hmr": "nest build --watch --webpack --webpackPath webpack-hmr.js",
+    "start:dev": "nest start --watch --preserveWatchOutput",
+    "start:debug": "NEST_DEBUG=true nest start --debug --watch --preserveWatchOutput",
+    "start:hmr": "nest build --watch --preserveWatchOutput --webpack --webpackPath webpack-hmr.js",
     "start:prod": "node dist/src/main",
     "start:repl": "NODE_ENV=dev nest start --watch --entryFile repl",
     "test": "jest --config test/jest.config.js --runInBand --verbose",
@@ -106,13 +106,14 @@
     "@types/csprng": "^0.1.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.9",
+    "@types/jest-json-schema": "^6.1.4",
     "@types/jwk-to-pem": "^2.0.1",
     "@types/lodash": "^4.14.198",
     "@types/luxon": "^3.3.4",
     "@types/mime-types": "^2.1.2",
     "@types/minimist": "^1.2.5",
     "@types/multer": "^1.4.7",
-    "@types/node": "^20.9.3",
+    "@types/node": "^18",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.13",
     "@types/qrcode-terminal": "^0.12.0",
@@ -122,6 +123,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "6.12.0",
     "@typescript-eslint/parser": "6.12.0",
+    "ajv": "^8.12.0",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.54.0",
@@ -139,6 +141,7 @@
     "jest": "29.7.0",
     "jest-expect-message": "^1.1.3",
     "jest-extended": "^4.0.2",
+    "jest-json-schema": "^6.1.0",
     "lint-staged": "^14.0.1",
     "prettier": "3.1.0",
     "prisma": "5.6.0",
