--- a/server/package.json
+++ b/server/package.json
@@ -95,6 +95,7 @@
     "swagger-stats": "^0.99.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.10",
