--- a/client/package.json
+++ b/client/package.json
@@ -2,18 +2,26 @@
   "name": "react-point-of-sale",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "env-cmd -f .env react-scripts start",
+    "build": "env-cmd -f .env react-scripts --expose-gc --max_old_space_size=8192 build",
+    "build:release": "rimraf ./build && env-cmd -f .env npm run build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.42",
+    "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.7",
+    "@material-ui/styles": "^4.6.0",
+    "@reduxjs/toolkit": "^2.0.x",
     "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.18.0",
+    "axios": "^1.6.x",
     "classnames": "^2.2.5",
     "cross-env": "^6.0.3",
     "currency.js": "^1.1.3",
     "fast-deep-equal": "^1.1.0",
     "immutability-helper": "^2.6.6",
-    "material-ui": "^1.0.0-beta.47",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "material-ui-pickers": "^1.0.0-rc.7",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
@@ -25,13 +33,17 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-select": "^1.2.1",
-    "redux": "^3.7.2",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "rimraf": "^3.0.2",
     "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.53.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
@@ -44,26 +56,19 @@
     "prettier": "^3.0.3",
     "husky": "^8.0.0"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
       "npx prettier --write",
       "npx eslint --fix --max-warnings=0"
     ]
   },
-  "scripts": {
-    "dev:web": "react-scripts start",
-    "dev:api": "cd api && yarn run dev:api",
-    "build:web": "react-scripts build",
-    "build:api": "cd api && yarn run build:api",
-    "prod:serve": "cd api && yarn run build:api && node build/index.js",
-    "start:web": "cross-env REACT_APP_IS_PROD=true  cross-env REACT_APP_PROD_URL_PREFIX='https://nreact-api.herokuapp.com/api' yarn run dev:web",
-    "start:api": "cd api && yarn start",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
+      "ie 11",
       "not dead",
       "not op_mini all"
     ],
