--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,9 @@
     "classnames": "^2.3.2",
     "currency.js": "^2.0.4",
     "formik": "^2.4.5",
+    "fuse.js": "^7.0.0",
     "i18next": "^23.7.11",
     "luxon": "^3.4.4",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
@@ -38,7 +38,6 @@
     "react-number-format": "^5.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.20.1",
-    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
   },
