--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-number-format": "^5.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.20.1",
+    "react-use-measure": "^2.1.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.3.2"
   },
