--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/pickers": "^3.3.11",
     "@mui/x-data-grid": "^4.0.0",
+    "@react-pdf/renderer": "^3.1.14",
     "@reduxjs/toolkit": "^1.8.1",
     "@uidotdev/usehooks": "^2.4.1",
     "async-mutex": "^0.4.0",
