--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,6 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/pickers": "^3.3.11",
     "@mui/x-data-grid": "^4.0.0",
-    "@react-pdf/renderer": "^3.1.14",
     "@reduxjs/toolkit": "^1.8.1",
     "@uidotdev/usehooks": "^2.4.1",
     "async-mutex": "^0.4.0",
@@ -30,6 +29,8 @@
     "formik": "^2.4.5",
     "fuse.js": "^7.0.0",
     "i18next": "^23.7.11",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
