--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,15 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@date-io/luxon": "^2.17.0",
+    "@date-io/luxon": "^1.3.13",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/pickers": "^3.3.11",
-    "@mui/x-data-grid": "^4.0.0",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
+    "@mui/styles": "^5.15.3",
+    "@mui/x-data-grid": "^5",
+    "@mui/x-date-pickers": "^6.18.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@uidotdev/usehooks": "^2.4.1",
     "async-mutex": "^0.4.0",
@@ -31,7 +34,7 @@
     "i18next": "^23.7.11",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
-    "luxon": "^3.4.4",
+    "luxon": "^1.21.3",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
