--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,38 @@
-version: '3.8'
+version: "3.8"
+services:
+  point-of-sale-client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    container_name: point-of-sale-client
+    ports:
+      - "3000:3000"
+    depends_on:
+      - point-of-sale-server
+    env_file:
+      - ./client/.env
+
+  point-of-sale-server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    container_name: point-of-sale-server
+    ports:
+      - "4000:4000"
+    depends_on:
+      - point-of-sale-mysql
+    env_file:
+      - ./server/.env
+
+  point-of-sale-mysql:
+    image: mysql:8
+    container_name: point-of-sale-mysql
+    ports:
+      - "3306:3306"
+    env_file:
+      - ./server/.env
+    volumes:
+      - point-of-sale-mysql:/var/lib/mysql
+
+volumes:
+  point-of-sale-mysql:
