--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vite-template-redux",
+  "name": "point-of-sale-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
     "start": "vite",
+    "build:unsafe": "vite build",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
