feat(client): lazy load PDF packages and handle redirect on RTK error or API server error

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start": "vite",
     "build:unsafe": "vite build",
     "build": "tsc && vite build",
+    "analyze:bundle": "vite-bundle-visualizer",
     "preview": "vite preview",
     "test": "vitest",
     "format": "prettier --write .",
@@ -74,6 +75,7 @@
     "rimraf": "^3.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
+    "vite-bundle-visualizer": "^1.0.0",
     "vitest": "^0.30.1"
   },
   "eslintConfig": {
