fix: fix deployment

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,6 @@
 # Node
 NODE_ENV=development
-APP_PORT=8080
+APP_PORT=4000
 API_URL=http://localhost
 APP_PREFIX=
 ALLOWED_ORIGINS=
@@ -10,6 +10,7 @@ SWAGGER_USER=user
 SWAGGER_PASSWORD=user
 
 # Database
+MYSQL_ROOT_PASSWORD=pass
 DATABASE_URL=mysql://user:pass@ipv4:3306/point-of-sale
 
 # JWT
