--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,32 @@
 version: "3.8"
 services:
-  point-of-sale-client:
+  client:
     build:
       context: ./client
       dockerfile: Dockerfile
+      target: prod
     container_name: point-of-sale-client
     ports:
       - "3000:3000"
     depends_on:
-      - point-of-sale-server
+      - server
     env_file:
-      - ./client/.env
+      - ./client/.env.production
 
-  point-of-sale-server:
+  server:
     build:
       context: ./server
       dockerfile: Dockerfile
+      target: prod
     container_name: point-of-sale-server
     ports:
       - "4000:4000"
     depends_on:
-      - point-of-sale-mysql
+      - mysql
     env_file:
-      - ./server/.env
+      - ./server/.env.production
 
-  point-of-sale-mysql:
+  mysql:
     image: mysql:8
     container_name: point-of-sale-mysql
     ports:
