--- a/server/package.json
+++ b/server/package.json
@@ -92,7 +92,8 @@
     "request-ip": "^3.3.0",
     "rimraf": "5.0.5",
     "rxjs": "7.8.1",
-    "swagger-stats": "^0.99.7"
+    "swagger-stats": "^0.99.7",
+    "ts-node": "10.9.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
@@ -114,7 +115,7 @@
     "@types/mime-types": "^2.1.2",
     "@types/minimist": "^1.2.5",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18",
+    "@types/node": "^20.10.8",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.13",
     "@types/qrcode-terminal": "^0.12.0",
@@ -153,7 +154,6 @@
     "supertest": "^6.3.3",
     "ts-jest": "29.1.1",
     "ts-loader": "9.5.1",
-    "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2",
     "webpack": "^5.88.2",
