--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --mode development",
     "start": "vite",
     "build:unsafe": "vite build --mode production",
     "build": "tsc && vite build --mode production",
