--- a/server/package.json
+++ b/server/package.json
@@ -46,9 +46,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --config test/jest.config.js --runInBand --verbose",
     "test:e2e": "jest --config test/jest-e2e.config.js --verbose",
     "execute": "ts-node ./src/scripts/index.ts",
-    "migrate:dev": "npx prisma migrate dev",
-    "migrate:dev:create": "npx prisma migrate dev --create-only",
-    "migrate:deploy": "npx prisma migrate deploy",
+    "migration:dev": "npx prisma migrate dev",
+    "migration:dev:create": "npx prisma migrate dev --create-only",
+    "migration:deploy": "npx prisma migrate deploy",
     "prisma:generate": "npx prisma generate",
     "prisma:studio": "npx prisma studio",
     "prisma:seed": "npx prisma db seed"
