--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,26 +1,14 @@
-FROM node:18-alpine AS dev
-
+FROM node:18-alpine AS base
 WORKDIR /app
-
 EXPOSE 3000
+COPY package.json ./package.json
+COPY yarn.lock ./yarn.lock
+RUN yarn install
+COPY . .
 
-COPY . ./
-
-RUN yarn
-
-CMD ["yarn", "dev"]
+FROM node:18-alpine AS dev
+CMD ["yarn", "start:dev"]
 
 FROM node:18-alpine AS prod
-
-WORKDIR /app
-
-EXPOSE 3000
-
-COPY . ./
-
-RUN yarn
-
 RUN yarn build:unsafe
-
 CMD ["yarn", "start"]
-
