--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev --mode development",
-    "start": "vite",
-    "build:unsafe": "vite build --mode production",
+    "start": "vite --mode production",
+    "start:dev": "vite --mode development",
     "build": "tsc && vite build --mode production",
+    "build:unsafe": "vite build --mode production",
+    "build:dev": "tsc && vite build --mode development",
     "analyze:bundle": "vite-bundle-visualizer",
     "preview": "vite preview",
     "test": "vitest",
