fix: fix client build not reading envs

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,9 @@
 VITE_APP_ENV=development  # development or production
 VITE_PUBLIC_URL=http://localhost:5173
 VITE_API_BASE_URL=http://localhost:8080
+
+VITE_APP_NAME=
+VITE_APP_ADDRESS=
+VITE_APP_CITY=
+VITE_APP_PHONE=
+VITE_APP_ZIP_CODE=
