--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,7 +7,7 @@ ENV VITE_APP_ENV=${VITE_APP_ENV} \
   VITE_APP_ADDRESS=${VITE_APP_ADDRESS} \
   VITE_APP_CITY=${VITE_APP_CITY} \
   VITE_APP_PHONE=${VITE_APP_PHONE} \
-  VITE_APP_ZIP_CODE=${VITE_APP_ZIP_CODE} \
+  VITE_APP_ZIP_CODE=${VITE_APP_ZIP_CODE}
 EXPOSE 3000
 COPY package.json ./package.json
 COPY yarn.lock ./yarn.lock
