--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^6.20.1",
     "react-use-measure": "^2.1.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
     "yup": "^1.3.2"
   },
   "devDependencies": {
