--- a/server/package.json
+++ b/server/package.json
@@ -61,11 +61,13 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.x",
+    "@nestjs/platform-socket.io": "^10.3.1",
     "@nestjs/schedule": "^3.0.3",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.11",
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/throttler": "^5.0.0",
+    "@nestjs/websockets": "^10.3.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.6.0",
     "@total-typescript/ts-reset": "^0.5.1",
