--- a/client/.env.example
+++ b/client/.env.example
@@ -2,8 +2,8 @@ VITE_APP_ENV=development  # development or production
 VITE_PUBLIC_URL=http://localhost:5173
 VITE_API_BASE_URL=http://localhost:8080
 
-VITE_APP_NAME=
-VITE_APP_ADDRESS=
-VITE_APP_CITY=
-VITE_APP_PHONE=
-VITE_APP_ZIP_CODE=
+VITE_APP_NAME=Toko Dinamis
+VITE_APP_ADDRESS=Jl. Raya Jungkat No. 41
+VITE_APP_CITY=Jungkat
+VITE_APP_PHONE=0852-5002-0300
+VITE_APP_ZIP_CODE=78351
