--- a/server/.env.example
+++ b/server/.env.example
@@ -11,7 +11,8 @@ SWAGGER_PASSWORD=user
 
 # Database
 MYSQL_ROOT_PASSWORD=pass
-DATABASE_URL=mysql://user:pass@ipv4:3306/point-of-sale
+# DATABASE_URL=mysql://user:pass@ipv4:3306/point-of-sale
+DATABASE_URL=mysql://root@localhost:3306/point-of-sale
 
 # JWT
 JWT_SECRET='run `openssl rand -hex 64` and replace this string'
