--- a/server/.env.example
+++ b/server/.env.example
@@ -10,7 +10,8 @@ SWAGGER_USER=user
 SWAGGER_PASSWORD=user
 
 # Database
-MYSQL_ROOT_PASSWORD=pass
+# MYSQL_ROOT_PASSWORD=pass
+MYSQL_ROOT_PASSWORD=
 # DATABASE_URL=mysql://user:pass@ipv4:3306/point-of-sale
 DATABASE_URL=mysql://root@localhost:3306/point-of-sale
 
